# copolymer_informatics

./: CITATION.md  README.md  pyproject.toml
copolymer_informatics/: cv_model.ipynb  meta_learner.ipynb
